# bernese

./: .gitignore  model.json  params.json  pyproject.toml  train.json
.clinerules/: 0-overview.md  1-uv-python-rules.md  2-code-style-rules.md  3-common-operations.md
.kilocode/rules/: 0-overview.md
plans/: target-config-index-storage.md
src/bernese/: __init__.py  types.py
src/bernese/cli/: __init__.py  data.py  inspect.py  summary.py  train.py
src/bernese/data/: __init__.py  akita.py  augment.py  bed.py  config.py  contacts.py  dataset.py  dna.py  genomics.py  hdf5.py  preparation.py
src/bernese/data/backends/: __init__.py  base.py  hdf5.py
src/bernese/data/targets/: __init__.py  bigwig.py  hic.py  pool.py  registry.py
src/bernese/data/transforms/: __init__.py  base.py  sequence.py  target.py
src/bernese/interpretation/: __init__.py
src/bernese/metrics/: __init__.py  losses.py  metrics.py
src/bernese/models/: __init__.py  blocks.py  config.py  geometry.py  head.py  layers.py  seqnn.py  trunk.py
src/bernese/models/blocks/: __init__.py  base.py  conv.py  dense.py  ops2d.py  towers.py
src/bernese/training/: __init__.py  config.py  trainer.py
